<resources>
    <string name="app_name">TM1_4_Todo_junto_funciona</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="cerrar">Cerrar</string>
    <string name="objetos">Objetos Android</string>

    <string name="botones1">Botones 1</string>
    <string name="botones2">Botones 2</string>
    <string name="widget">Widgets</string>
    <string name="layout">Layouts</string>
    <string name="containers">Containers</string>
    <string name="helpers">Helpers</string>
    <string name="google">Google</string>
    <string name="legacy">Legacy</string>
    <string name="acerca">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="volver">Volver</string>
    <string name="texto">Textos</string>
    <string name="about_body">Aplicación demo del curso TM1. Incluye ejemplos de controles, layouts, containers y componentes Material. Integrantes: Equipo Botones.</string>
    <string name="google_module_title">Módulo Google (Paleta)</string>
    <string name="google_module_subtitle">Demo con elementos de la paleta Google: MapView y AdView.</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_maps_key">AIzaSyB_qm8Y-3xNB253ipnaLsotc2iSHDuW5W4</string>

    <string name="W1_titulo">Widgets</string>
    <string name="W1_imageview">ImageView</string>
    <string name="W1_webview">WebView</string>
    <string name="W1_videoview">VideoView</string>
    <string name="W1_calendar">CalendarView</string>
    <string name="W1_textclock">TextClock</string>
    <string name="W1_progressbar">ProgressBar</string>
    <string name="W1_progressbarH">ProgressBar (Horizontal)</string>
    <string name="W1_seekbar">SeekBar</string>
    <string name="W1_seekbarD">SeekBar (Discrete)</string>
    <string name="W1_regresar">Regresar</string>

    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>


</resources>
