<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#00BCD4" />

            <TextView
                android:id="@+id/Ltv_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/usuario"
                android:textSize="20sp"
                android:paddingTop="20dp"/>

            <EditText
                android:id="@+id/Let_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:inputType="textPersonName"
                android:labelFor="@id/Ltv_usuario"/>


            <TextView
                android:id="@+id/Ltv_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/contrasenia"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Let_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:labelFor="@id/Ltv_contrasenia"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <Button
                android:id="@+id/Lbtn_acceder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/acceder"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/Lbtn_cerrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/cerrar"
                android:textSize="18sp"
                android:textColor="@color/black"/>





        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>